# MLClassProjectVideoTracking

./: .gitignore  README.md  all_100_checkpoint.pth  all_100_model_best.pth  all_25model_best.pth  all_40checkpoint.pth  all_40model_best.pth  all_checkpoint.pth  all_model_best.pth  cross_test.py  csrnet.py  dataset.py  main.py  plotting_tools.py  requirements.txt  test_video.py  testcheckpoint.pth  train.py  utils.py
ShanghaiTech_Crowd_Counting_Dataset/part_A_final/: Test.py
figures/training/: training_curves_all_25.json
mall_dataset/mall_dataset/: Test.py
tools/labeling/: Cargo.toml
tools/labeling/labeled_data/ground_truth/h5/: 1_20260410T023747Z.h5  1_20260410T054608Z.h5  crowd_20260410T060438Z.h5  protest_20260410T024440Z.h5
tools/labeling/labeled_data/ground_truth/json/: 1_20260410T023747Z.json  1_20260410T054608Z.json  crowd_20260410T060438Z.json  protest_20260410T024440Z.json
tools/labeling/src/: main.rs
training/: README.md  build_combined_json.py  combined.json  mall_test.json  mall_train.json  part_A_test.json  part_A_train.json  part_B_test.json  part_B_train.json
