[package]
name = "labeling"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
eframe = { version = "0.29", default-features = true }
egui = "0.29"
hdf5-pure = "0.1"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "bmp",
    "webp",
] }
ndarray = "0.16"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
